# yahboom_r2l_ros2

./: MULTIPLAYER_IMPLEMENTATION.md  README.md
src/yahboomcar_bluetooth/: README_bridge.md  package.xml  setup.cfg  setup.py
src/yahboomcar_bluetooth/launch/: bluetooth_bridge.launch.py
src/yahboomcar_bluetooth/scripts/: README.md  ble_client_test.py  ble_server.py  bluetooth_requirements.txt  clear_macos_bluetooth_cache.sh  test_bluetooth_detection.py  test_ros2_bridge.py
src/yahboomcar_bluetooth/yahboomcar_bluetooth/: bluetooth_bridge_node.py  bluetooth_ros2_bridge.py
src/yahboomcar_bringup/: CMakeLists.txt  package.xml
src/yahboomcar_bringup/include/yahboomcar_bringup/: base.h
src/yahboomcar_bringup/launch/: bringup.launch  bringup.launch.py  bringup_calib.launch.py  bringup_foxy.launch.py  calibrate_angular.launch.py  calibrate_imu.launch.py  calibrate_linear.launch.py  driver_test.launch.py  patrol.launch  patrol.launch.py  test_imu.launch  test_imu.launch.py  view_odom.launch.py  yahboomcar.launch  yahboomcar.launch.py  yahboomcar_model.launch  yahboomcar_model.launch.py  yahboomcar_sim.launch.py  yahboomcar_test.launch  yahboomcar_test.launch.py
src/yahboomcar_bringup/param/: imu_calib.yaml  robot_localization.yaml
src/yahboomcar_bringup/scripts/: calibrate_angular.py  mcnamu_driver.py  mcnamu_driver_sim.py
src/yahboomcar_bringup/src/: base.cpp  base_node.cpp
src/yahboomcar_ctrl/: package.xml  setup.py
src/yahboomcar_ctrl/launch/: yahboom_joy.launch.py  yahboom_keyboard.launch.py
src/yahboomcar_ctrl/yahboomcar_ctrl/: yahboom_joy.py  yahboom_keyboard.py
src/yahboomcar_description/: CMakeLists.txt  package.xml
src/yahboomcar_description/launch/: display.launch.py  display_r2l.launch.py  robot_state_only.launch.py
src/yahboomcar_description/rviz/: yahboomcar_r2l.rviz
src/yahboomcar_master_ui/: README.md  package.xml  setup.cfg  setup.py
src/yahboomcar_master_ui/yahboomcar_master_ui/: car_status_widget.py  dual_car_status_widget.py  event_log_widget.py  game_state_widget.py  main_window.py  manual_control_widget.py  master_ui.py  race_stats_widget.py  ros_data_manager.py  system_status_widget.py
src/yahboomcar_master_ui/yahboomcar_master_ui/car_details/: __init__.py  advanced_controls_tab.py  ar_integration_tab.py  config_tab.py  detail_dialog.py  diagnostics_tab.py
src/yahboomcar_msgs/: CMakeLists.txt  package.xml
src/yahboomcar_msgs/msg/: ImageMsg.msg  PointArray.msg  Position.msg  Target.msg  TargetArray.msg
