<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yahboomcar_bringup</name>
  <version>0.0.0</version>
  <description>Hardware drivers and system bringup for Yahboom R2L robot platform</description>
  <maintainer email="irvsteve@gmail.com">atr-lab</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>robot_localization</depend>
  <depend>imu_filter_madgwick</depend>
  <depend>yahboomcar_msgs</depend>
  <depend>yahboomcar_description</depend>
  <depend>yahboomcar_ctrl</depend>
  
  <!-- Dependencies for patrol and navigation scripts -->
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
